EDIT styles and animation: - add overflow:hidden to body to prevent horizontal scroll; - edit animation function; - add reveal active class to about-us section (for animation)

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -23,6 +23,9 @@
 
   scroll-behavior: smooth;
 }
+body {
+  overflow-x: hidden;
+}
 
 .visually-hidden {
   position: absolute;
